--- a/src/components/About/about.module.css
+++ b/src/components/About/about.module.css
@@ -1,5 +1,7 @@
-.back{
-    width: 100%;
-    height: 100vh;
-    background: url(../../img/Group\ 325.jpg) center / cover;
+.video{
+    width: 300px;
+    height: 300px;
+}
+.h1{
+    color: aliceblue;
 }
