--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -2,7 +2,7 @@
 .back{
     width: 100%;
     height: 100vh;
-    background: url(../../img/Group\ 325.jpg) center / cover;
+    background: url(../../img/back.jpg) center / cover;
 }
 .container{
     padding: 0px 15px;
@@ -14,9 +14,9 @@
         justify-content: center;
         height: 18px;
         padding-top: 52px;
+        grid-gap: 45px;
     }
     .link{
-        margin-right: 45px;
         text-decoration: none;
         font-family: "Instrument Sans", sans-serif;
         font-weight: 5000;
