--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -1,29 +1,36 @@
 
 .back{
     width: 100%;
-    height: 100vh;
+    padding: 50px 0;
+    min-height: 100vh;
     background: url(../../img/back.jpg) center / cover;
 }
 .container{
     padding: 0px 15px;
     margin: 0 auto;
 }
+.link{
+    text-decoration: none;
+    font-family: "Instrument Sans", sans-serif;
+    text-align: center;
+}
+.active{
+    color: #CFA550;
+}
+.nonactive{
+    color: #A7A5A6;
+}
 @media (min-width: 1200px) {
     .nav{
         display: flex;
         justify-content: center;
         height: 18px;
-        padding-top: 52px;
         grid-gap: 45px;
     }
     .link{
-        text-decoration: none;
-        font-family: "Instrument Sans", sans-serif;
-        font-weight: 5000;
+        font-weight: 500;
         font-size: 16px;
         line-height: 18px;
-        text-align: center;
-        color: #A7A5A6;
     }
 
 }
