--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -4,6 +4,7 @@
     padding: 50px 0;
     min-height: 100vh;
     background: url(../../img/back.jpg) center / cover;
+    position: relative;
 }
 .container{
     padding: 0px 15px;
@@ -20,6 +21,30 @@
 .nonactive{
     color: #A7A5A6;
 }
+.p{
+    color: white;
+}
+.translate{
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    display: flex;
+}
+.btns{
+    font-family: "Instrument Sans", sans-serif;
+    color: #A7A5A6;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 18px;
+    border: none;
+    background: none;
+}
+.line{
+    height: 18px;
+    width: 0;
+    border: 1px solid #A7A5A6;
+}
+
 @media (min-width: 1200px) {
     .nav{
         display: flex;
