--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -10,10 +10,25 @@
     padding: 0px 15px;
     margin: 0 auto;
 }
-.link{
+.link,.serLink{
     text-decoration: none;
     font-family: "Instrument Sans", sans-serif;
-    text-align: center;
+}
+.serLink{
+    padding: 4px 16px;
+}
+.divLink{
+    width: 100%;
+    height: 26px;
+    display: flex;
+}
+.serLink:hover{
+    color: #CFA550 !important;
+
+}
+.divLink:hover{
+    color: #CFA550 !important;
+    background: #A7A5A6 !important;
 }
 .active{
     color: #CFA550;
@@ -52,10 +67,13 @@
         height: 18px;
         grid-gap: 45px;
     }
-    .link{
+    .link,.serLink{
         font-weight: 500;
         font-size: 16px;
         line-height: 18px;
+    }
+    .serLink{
+        width: 158px !important;
     }
 
 }
