--- a/src/components/About/about.module.css
+++ b/src/components/About/about.module.css
@@ -1,7 +1,29 @@
-.video{
-    width: 300px;
-    height: 300px;
+.divVideo{
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
 }
-.h1{
-    color: aliceblue;
+.video{
+    width: 1600px;
+    height: 960px;
+}
+.onas{
+    margin-top: 100px;
+    margin-left: 130px;
+    margin-right: 130px;
+}
+.h3{
+    font-family: "Instrument Sans", sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 50.6px;
+    color: #ffffff;
+    margin-bottom: 50px;
+}
+.p{
+    font-family: "Instrument Sans", sans-serif;
+    font-weight: 450;
+    font-size: 24px;
+    line-height: 30px;
+    color: #ffffff;
 }
